# pydantic-sqs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  pre-release.yml  release.yml  tests.yml
docs/: Makefile  conf.py  development.rst  index.rst  module.rst  quickstart.rst  requirements.txt  serialization.rst
examples/: README.md  example.py
examples/async_worker/: Makefile  README.md  models.py  sender.py  worker.py
pydantic_sqs/: __init__.py  abstract.py  exceptions.py  model.py  queue.py
test/: conftest.py  test_pydantic_SQSModel.py  test_pydantic_SQSQueue.py  test_pydantic_sqs.py
