[tool.poetry]
name = "pydantic-sqs"
version = "0.1.0"
description = "Send and receive AWS SQS messages directly to pydantic objects"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrewthetechie/pydantic-sqs"
repository = "https://github.com/andrewthetechie/pydantic-sqs"
documentation = "https://pydantic-sqs.readthedocs.io/en/latest/"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Framework :: AsyncIO"
]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/pydantic-sqs/releases"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
aiobotocore = "^2.4.0"


[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.2.0"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^4.3.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.12.1"
flake8 = "^5.0.0"
black = ">=21.10b0"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.2"
mypy = "^0.982"
pre-commit-hooks = "^4.2.0"
Pygments = "^2.13.0"
pyupgrade = "^2.38.0"
furo = ">=2021.11.12"
pytest-cov = "^3.0.0"
types-croniter = "^1.3.2"
pytest_async = "^0.1.1"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.7.0"
pytest-lazy-fixture = "^0.6.3"
pytest-env = "^0.6.2"
pytest-mockservers = "^0.6.0"
pytest-xdist = "^2.5.0"
tox = "^3.26.0"
pylint = "^2.13.9"
bandit = "^1.7.4"
docker = "^6.0.1"

[tool.coverage.paths]
source = ["pydantic_sqs", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pydantic_sqs"]

[tool.coverage.report]
show_missing = true
fail_under = 98

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-n auto --ignore examples --cov=pydantic_sqs --cov-report=term-missing --cov-fail-under 75"
env = [
	"AWS_ACCESS_KEY_ID=x",
	"AWS_SECRET_ACCESS_KEY=x",
	"AWS_DEFAULT_REGION=us-east-1"
]

[tool.bandit]
exclude= "tests/ examples/*"

[pylint.MASTER]
extension-pkg-whitelist="pydantic"
suggestion-mode="yes"

[pylint.'MESSAGES CONTROL']
disable="R0903,R0801"
